
Style Changes
=============

* Flex-Layout: The following widgets have a changed layout based on flex-box and grid:
  * Fader (new DOM element: _track as container for _handle)

Fixes
=====

* TK.element: object argument wasn't handled as attributes but as styles
  opposed to what the documentation says. This might break backward compatibility
  in some cases.
  
Features
========

* TK.Value: New options
  * `type` sets the type attribute of the input child
  * `placeholder` sets the placeholder attribute of the input child
  * `editmode` sets whether the userset event fires on hitting enter (`onenter`) or immediately after every key press (`immediate`)
* TK.Dialog was officially added (including docs, CSS and AWML abilities)
* TK.Color: new universal conversion functions taking any kind of color parameter or model

Changes
=======

* TK.Pager: drop option `overlap` due to new flex layout was already missing since 1.3 but not removed.


Changes since version 1.1
--------------------------------------

New Features
============

o added DragCapture. DragCapture implements a pointer capture logic. It is now used
  in DragValue, Drag and ResponseHandler. It automatically supports multi touch.

o Iconset as font

Improvements
============

o DragValue: The 'blind_angle' option now applies to all choices of the 'direction'
  option.

o DragValue: can be reversed by setting the option "reverse" to true.

o Drag: supports CSS transformations if option "transform" is set to true.

o ResponseHandle: has real MultiTouch support. This also applies to the z_handling
  gesture, which means that any number of touch points can now drag handles in the
  EQ.

o Button/Toggle: set URL or class name for icon

o Faders got title and value ChildWidgets.

o Scale: New child elements pointer and bar to visualize values within Scale.

o Window: complete rewrite. Less DOM nodes, less complexity, using new
  toolkit APIs. Additionally layout switched from table-like div zoo to